--- a/content/how-to/cloud-servers/create-your-first-website-on-cloud-servers-quickly/download.html
+++ b/content/how-to/cloud-servers/create-your-first-website-on-cloud-servers-quickly/download.html
@@ -12,7 +12,7 @@
 
 <body>
 
-<img src="http://90df0b8db988dcfbf5da-c1875553a16f2a6d80002cac1a22fc37.r75.cf1.rackcdn.com/rackspace.png" /> 
+<img src="rackspace.png" /> 
 
 <h3>Welcome to the Rackspace Cloud</h3>
 
@@ -71,5 +71,5 @@ What other resources are available?
 </p>
 
 <br /><br /> 
-<img src="http://90df0b8db988dcfbf5da-c1875553a16f2a6d80002cac1a22fc37.r75.cf1.rackcdn.com/thanks.png" /> 
+<img src="thanks.png" /> 
 </body>
